--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body style="text-align:center;">
     <div class="cuerpo" style="background-color: aqua; width: 100%; height: 200vh;">
         <header>
             <h1>INSTITUTO TUPAC AMARU</h1>
