--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body style="text-align:center;">
+<body>
     <div class="cuerpo" style="background-color: aqua; width: 100%; height: 200vh;">
         <header>
             <h1>INSTITUTO TUPAC AMARU</h1>
@@ -38,7 +38,7 @@
 
         </aside>
 
-        <main style="background-color: rgb(4, 255, 0); width: 70%; height: 1400px;">
+        <main style="background-color: rgb(4, 255, 0); width: 70%; height: 1400px;" style="text-align:center;">
             <section id="inicio">
                 <h2>inicio</h2>
                 <h3>informacion sobre la carrera</h3>
